#1801 update backend dependencies